2Gram sequence recommender finished, now will work on baseline closest time seq recommender